# primes-python

./: .gitignore  Makefile  Pipfile  README.md  mkdocs.yml  prime_shapes.md  pyproject.toml
docs/: DOCS.md
primes/: main.py
tests/: test_main.py
